--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
     <h2 class="pad-t mega push-2">1. Conan Joins the Pirates</h2>
     <blockquote class="milli push-2">
-      <p class="italic push-0">Believe green buds awaken in the spring,<br>That autumn paints the leaves with somber fire;<br>Believe I held my heart inviolate<br>To lavish on one man my hot desire.
-      </p>
+      <p class="italic push-0">Believe green buds awaken in the spring,<br>That autumn paints the leaves with somber fire;<br>Believe I held my heart inviolate<br>To lavish on one man my hot desire.</p>
       <footer><cite class="not-italic micro">— The Song of Bélit</cite></footer>
     </blockquote>
 
@@ -47,7 +46,7 @@
 
     <p><span class="hang-punc">"</span>If we must travel together,” said the master, “we may as well be at peace with each other. My name is Tito, licensed master-shipman of the ports of Argos. I am bound for Kush, to trade beads and silks and sugar and brass-hilted swords to the black kings for ivory, copra, copper ore, slaves and pearls.”</p>
 
-    <p><span class="hang-punc">"</span>The swordsman glanced back at the rapidly receding docks, where the figures still gesticulated helplessly, evidently having trouble in finding a boat swift enough to overhaul the fast-sailing galley.</p>
+    <p><span class="hang-punc">"</span>The swordsman glanced back at the rapidly receding docks, where the figures still gesticulated helplessly, evidently having trouble in finding a boat swift enough to overhaul the fast-sailing<br>galley.</p>
 
     <p><span class="hang-punc">"</span>I am Conan, a Cimmerian,” he answered. “I came into Argos seeking employment, but with no wars forward, there was nothing to which I might turn my hand.”</p>
 
